--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -9,3 +9,7 @@ ed25519-dalek = "^0.8"
 sha2 = "^0.7"
 rand = "^0.5"
 base64 = "^0.9"
+serde = "^1.0"
+serde_derive = "^1.0"
+rmp-serde = "^0.13"
+shrinkwraprs = "^0.2"
